Just added a photo folder where I can store and pull out my photos when I need to add images for the website.

--- a/index.html
+++ b/index.html
@@ -7,4 +7,12 @@
     <title> Ormiston Senior College Football</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <nav>
+        <img src="Screenshot 2024-05-21 094332" alt="">
+        <ul>
+            
+        </ul>
+    </nav>
+</body>
 </html>
