--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <nav>
         <img src="Screenshot 2024-05-21 094332" alt="">
         <ul>
-            
+            <li><a href=""></a></li>
+            <li><a href="">index.html</HOME></a></li> 
+            <li><a href="signup.html">SIGN UP</a><li>
+
+
         </ul>
     </nav>
 </body>
