--- a/index.html
+++ b/index.html
@@ -18,5 +18,39 @@
 
         </ul>
     </nav>
+
+    <div class="info">
+        <h1> Welcome!</h1>
+    </div>
+
+    <section class="info">
+            <h3>OSC VALUES</h3>
+            <ul>
+                <li>Kahikatea
+                    To strive
+                    I strive to always achieve my best. No matter how tough things get I am able to persevere. The Kahikatea is a mighty tree that is resilient and grows tall out of the harshest of environments.
+                    Mokoroa
+                    To grow
+                    I approach all experiences with an open mind. I continue to grow through observation and reflection. The Mokoroa goes through a great period of changing and learning as it grows from egg, to caterpillar, to chrysalis and finally to moth.
+                    Kea
+                    To inquire
+                    I am curious and seek to find answers using investigation and questioning. The Kea shows critical curiosity and explores the environment making tools and experimenting to problem solve.
+                    Pūkeko
+                    To create
+                    I am creative and innovative. I try to look at things in different ways, having fun and being bold in my choices. The Pūkeko is comfortable with risk and is creative in taking opportunities that allow it to thrive in most environments.
+                    Pūngāwerewere
+                    To utilise
+                    I use my prior learning to help with new learning and I look to make further connections with the wider world. The Pūngāwerewere makes meaning using its web. It can apply its web to multiple purposes including catching food, concealment, making nets, protecting young, even flying.
+                    Waka
+                    To contribute
+                    I am a responsible and important part of the community. I plan strategically to meet the goals I set by myself and with others. The Waka requires a team effort from everyone on board. Paddling in unison results in greater collective success and efficiency.
+                    Harakeke
+                    To support
+                    I respect everyone’s ideas and feel comfortable sharing my opinion. Supporting the learning of others deepens my own understanding. The Harakeke is made strong by the relationships both within and between the leaves, combined together the leaves are strong as rope.
+                    Papatūānuku
+                    To value
+                    I value and care for our environment; cultural, social and physical. Papatūānuku, gives life to all things. She is the foundation for culture and the idea that we are all connected through our environment.</li>
+            </ul>
+    </section>
 </body>
 </html>
