Just linked the main page to the sign up page so that when pressing on them you can switch pages

--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@
                     I value and care for our environment; cultural, social and physical. Papatūānuku, gives life to all things. She is the foundation for culture and the idea that we are all connected through our environment.</li>
             </ul>
     </section>
+    <div class="text-box-index">
+        <h1>Ormiston Senior College Football</h1>
+
+        <a href="signup.html"
+class="herp-btn">SIGN UP</a> 
+   </div>
 </body>
 </html>
