I fixed an issue to do with the index homepage. The name wasnt appearing as home so i did a quick fix

--- a/signup.html
+++ b/signup.html
@@ -24,6 +24,14 @@
                 <li><a href="index.html">HOME</a></li>
             </ul>
         </nav>
+        
+        <div class="about-us">
+            <div class="about-us-main">
+                <a data-fancybox="gallery"
+                href="img/HOME/Screenshot 2024-05-21 094332.png"
+                
+            </div>
+        </div>
       </body>
 
 </html>
