--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="Screenshot 2024-05-21 094332" alt="">
         <ul>
             <li><a href=""></a></li>
-            <li><a href="">index.html</HOME></a></li> 
+            <li><a href="index.html">HOME</a></li> 
             <li><a href="signup.html">SIGN UP</a><li>
 
 
