Some issues with my image, sometimes my image doesnt appear

--- a/signup.html
+++ b/signup.html
@@ -28,9 +28,9 @@
         <div class="about-us">
             <div class="about-us-main">
                 <a data-fancybox="gallery"
-                href="img/HOME/Screenshot 2024-05-21 094332.png"
+                href="img/HOME/Screenshot 2024-05-21 094332.jpg"
                 
-            </div>
+            
         </div>
       </body>
 
