--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav>
-        <img src="Screenshot 2024-05-21 094332" alt="">
+        <img src="" alt="">
         <ul>
-            <li><a href=""></a></li>
+            <li><a href="img/Screenshot 2024-05-21 094332.jpg"></a></li>
             <li><a href="index.html">HOME</a></li> 
             <li><a href="signup.html">SIGN UP</a><li>
 
