--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="" alt="">
         <ul>
-            <li><a href="img/Screenshot 2024-05-21 094332.jpg"></a></li>
+            <li><a href="photots\Screenshot 2024-05-21 094332.jpg"></a></li>
             <li><a href="index.html">HOME</a></li> 
             <li><a href="signup.html">SIGN UP</a><li>
 
