Added more design to the sign up brakets and I also was able to re size everything on the website. I removed scrolling. I also added a lot of background transparency and colour to the text of the website.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title> Ormiston Senior College Football</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="overflow: hidden;">
+    <img src="photots\Screenshot 2024-05-21 094332.jpg" class="sports_image" style="width: 100vw;position:absolute;z-index: -43049; opacity: 85.69%;">
     <nav>
         <img src="" alt="">
         <ul>
@@ -20,13 +21,16 @@
     </nav>
 
     <div class="info">
-        <h1> Welcome!</h1>
+        <h1></h1>
     </div>
 
     <section class="info">
+        <h1 style="font-size:4.069vw;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Ormiston Senior College Football</h1>
+        <br><br><br><br><br><br>
             <h3>OSC VALUES</h3>
+            <br>
             <ul>
-                <li>Kahikatea
+                <li style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-weight: 900;text-shadow:1px 1px 10px white;text-align: center;font-size:1.324vw">Kahikatea
                     To strive
                     I strive to always achieve my best. No matter how tough things get I am able to persevere. The Kahikatea is a mighty tree that is resilient and grows tall out of the harshest of environments.
                     Mokoroa
@@ -53,7 +57,7 @@
             </ul>
     </section>
     <div class="text-box-index">
-        <h1>Ormiston Senior College Football</h1>
+        
 
         <a href="signup.html"
 class="herp-btn">SIGN UP</a> 
