Added new images also made a about us page I added images and spoke about achievements ogf the football teams. I changed the hover effect to black because I added the osc logo on to the website. I allso added new images to the sign up pages

--- a/signup.html
+++ b/signup.html
@@ -26,6 +26,8 @@
             <img srce="Screenshot 2024-05-21 0943322.png" alt="">
             <ul>
                 <li><a href=""></a></li>
+                <img src="photots\osc logo.png" style="width:8vw; margin-right: 65vw;margin-top:1vw;">
+                <li><a href="aboutus.html">ABOUT US</a></li> 
                 <li><a href="index.html">HOME</a></li>
             </ul>
         </nav>
@@ -34,8 +36,8 @@
             <div class="about-us-main">
                 
                 <img src="photots\Screenshot 2024-05-21 094332.jpg" class="sports_image" style="width: 100vw;position:absolute;z-index: -43049; opacity: 60.69%;">
-                <img src="https://i.ibb.co/wp2YH8f/116157059-1698929190272703-3730896098319008354-n.jpg" style="width:19.69420vw; position:absolute;left:66.69%;top:23.69%;">
-                <img src="https://i.ibb.co/Wc3BdRD/123107687-3514139325319581-2459384243874460845-n.jpg" style="width:19.69420vw; position:absolute;left:66.69%;top:69.69%">
+                <img src="photots\osc football side image 1.jpg" style="width:19.69420vw; position:absolute;left:66.69%;top:23.69%;">
+                <img src="photots\osc football side image 2.jpg" style="width:19.69420vw; position:absolute;left:66.69%;top:69.69%">
 
                       
 
@@ -73,7 +75,7 @@
         </div>
         </form>
 <section class="Ormiston Football" style="position:absolute;top:88.666%;width:25vw;text-align: center;left:18.75679%">
-    <h3> About Us</h3>
+    <h3> Contact Us</h3>
     <p> For more information about us, contact us at studentservices@ormiston.school.nz</p>
     <p>Made By Hassan</p>
 </section>
